# langvox

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docker/: Dockerfile.test
docs/: executive-summary.md  roadmap.md  vision.md
docs/prd/: 0001-core-analyze.md  README.md
docs/vision/: idea.md
scripts/: test_local.sh
src/audiotrace/: __init__.py  core.py  extractors.py  models.py
tests/: conftest.py  test_analyze.py  test_extractors.py  test_fixtures.py  test_models.py
tests/fixtures/: README.md
